# stacker

./: .gitattributes  CHANGELOG.md  README.md  stack-snapshots.cabal  stacker.cabal
.github/workflows/: haskell-ci.yml.off  stack-action.yml
data/: ghc.csv  lts.csv  nightly.csv
src/: Analysis.hs  CSV.hs  ColorOption.hs  Commands.hs  Config.hs  Git.hs  License.hs  Main.hs  Options.hs  PathUtil.hs  StackYaml.hs  Types.hs  XDG.hs
test/: Main.hs  TestBump.hs  TestDryRun.hs
test/golden/: dry-run-files.golden  dry-run-recursive.golden  dry-run.golden  dry-run.txt
test/golden/tests/: stack-9.10.yaml  stack-9.12.yaml  stack.yaml
test/recursive/: stack-9.6.yaml
test/recursive/other/: stack.yaml
test/recursive/subdir1/: stack-9.8.yaml  stack-other.yaml
test/recursive/subdir1/subdir2/: stack-9.10.yaml
test/tests/: stack-9.0.yaml  stack-9.10.yaml  stack-9.12.yaml  stack-9.2.yaml  stack-9.4.yaml  stack-9.6.yaml  stack-9.8.yaml
