cabal-version:      3.0
name:               stack-snapshots
version:            0.1.0.0
synopsis:           Bump snapshots in stack.yaml files
description:
  A tool to bump snapshots (resolvers) in stack*.yaml files.
  It upgrades LTS snapshots to the latest version and converts
  nightlies to LTS when available.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Andreas Abel
maintainer:         andreas.abel@gu.se
category:           Development
build-type:         Simple
extra-doc-files:    README.md

common warnings
    ghc-options:
        -Wall
        -Wcompat
    default-language:
        Haskell2010
    default-extensions:
        DeriveGeneric
        LambdaCase
        ImportQualifiedPost
        ScopedTypeVariables
    other-extensions:
        OverloadedStrings

executable stack-snapshots
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Options
        ColorOption
        License
        Config
        Git
        CSV
        StackYaml
        Analysis
        Commands
        XDG
        Types
        Paths_stack_snapshots
    build-depends:
        base >=4.16 && <5,
        directory >=1.3,
        filepath >=1.4,
        process >=1.6,
        text >=2.0,
        bytestring >=0.11,
        yaml >=0.11,
        aeson >=2.0,
        containers >=0.6,
        optparse-applicative >=0.17,
        ansi-terminal >=0.11,
        time >=1.11,
        mtl >=2.2,
        split >=0.2,
        file-embed >=0.0.15
    hs-source-dirs:   src

test-suite stack-snapshots-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:
        TestDryRun
        TestBump
    build-depends:
        base >=4.16 && <5,
        tasty >=1.4,
        tasty-golden >=2.3,
        directory >=1.3,
        filepath >=1.4,
        process >=1.6,
        text >=2.0,
        bytestring >=0.11
    hs-source-dirs:   test
