cabal-version:      3.0
name:               stack-snapshots
version:            0.1.0.0
synopsis:           Bump snapshots in stack.yaml files
description:
  A tool to bump snapshots (resolvers) in stack*.yaml files.
  It upgrades LTS snapshots to the latest version and converts
  nightlies to LTS when available.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Andreas Abel
maintainer:         andreas.abel@gu.se
category:           Development
build-type:         Simple

tested-with:
  GHC == 9.4.8
  GHC == 9.6.7
  GHC == 9.8.4
  GHC == 9.10.3
  GHC == 9.12.2
  GHC == 9.14.1

extra-doc-files:    README.md

data-dir:           data
data-files:
    ghc.csv
    lts.csv
    nightly.csv

source-repository head
    type: git
    location: https://github.com/andreasabel/stack-snapshots.git

common warnings
    ghc-options:
        -Wall
        -Wcompat
        -Wunused-packages
        -Wincomplete-patterns
    default-language:
        Haskell2010
    default-extensions:
        DeriveGeneric
        LambdaCase
        ImportQualifiedPost
        ScopedTypeVariables
    other-extensions:
        OverloadedStrings

executable stack-snapshots
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Options
        ColorOption
        License
        Config
        Git
        CSV
        StackYaml
        Analysis
        Commands
        XDG
        Types
        Paths_stack_snapshots
    autogen-modules:
        Paths_stack_snapshots
    build-depends:
        base >=4.17 && <5,
        directory >=1.3.7.0,
          -- XdgState requires directory-1.3.7.0 or higher
        filepath >=1.4,
        process >=1.6,
        text >=2.0,
        yaml >=0.11,
        aeson >=2.0,
        containers >=0.6,
        optparse-applicative >=0.17,
        ansi-terminal >=0.11,
        file-embed >=0.0.15
    hs-source-dirs:   src

test-suite stack-snapshots-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:
        TestDryRun
        TestBump
    build-depends:
        base >=4.17 && <5,
        tasty >=1.4,
        tasty-golden >=2.3,
        directory >=1.3.7.0,
        filepath >=1.4,
        process >=1.6,
        text >=2.0,
        bytestring >=0.11,
        temporary >=1.3
    hs-source-dirs:   test
    build-tool-depends: stack-snapshots:stack-snapshots
