cabal-version:      3.0
name:               stacker
version:            0.0.0.0
synopsis:           Bump snapshots in stack.yaml files
description:
  A tool to bump snapshots (resolvers) in stack*.yaml files.
  It upgrades LTS snapshots to the latest version and converts
  nightlies to LTS when available.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Andreas Abel
maintainer:         andreas.abel@gu.se
category:           Development
build-type:         Simple

tested-with:
  GHC == 9.4.8
  GHC == 9.6.7
  GHC == 9.8.4
  GHC == 9.10.3
  GHC == 9.12.2
  GHC == 9.14.1

extra-doc-files:
  CHANGELOG.md
  README.md

extra-source-files:
  test/tests/*.yaml
  test/golden/dry-run.golden
  test/golden/dry-run-files.golden
  test/golden/tests/*.yaml

data-dir:
  data
data-files:
  ghc.csv
  lts.csv
  nightly.csv

source-repository head
  type: git
  location: https://github.com/andreasabel/stack-snapshots.git

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Wunused-packages
    -Wincomplete-patterns
  default-language:
    Haskell2010
  default-extensions:
    DeriveGeneric
    LambdaCase
    ImportQualifiedPost
    ScopedTypeVariables
  other-extensions:
    OverloadedStrings

library
  import:           warnings
  hs-source-dirs:   src
  exposed-modules:
    Options
    ColorOption
    License
    Config
    Git
    CSV
    StackYaml
    Analysis
    Commands
    XDG
    Types
  other-modules:
    Paths_stacker
  autogen-modules:
    Paths_stacker
  build-depends:
    , base                  >= 4.17 && < 5
    , directory             >= 1.3.7.0
        -- XdgState requires directory-1.3.7.0 or higher
    , filepath              >= 1.4
    , process               >= 1.6
    , text                  >= 2.0
    , yaml                  >= 0.11
    , aeson                 >= 2.0
    , containers            >= 0.6
    , optparse-applicative  >= 0.17
    , ansi-terminal         >= 0.11
    , file-embed            >= 0.0.15

executable stacker
  import:           warnings
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
    , base       >= 4.17 && < 5
    , stacker

test-suite stacker-test
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  other-modules:
    TestDryRun
    TestBump
  build-depends:
    , base          >= 4.17 && < 5
    , stacker
    , tasty         >= 1.4
    , tasty-golden  >= 2.3
    , directory     >= 1.3.7.0
    , filepath      >= 1.4
    , text          >= 2.0
    , bytestring    >= 0.11
    , temporary     >= 1.3
    , process
  build-tool-depends:
    , stacker:stacker
